<resources>
    <string name="app_name">GyanMatrix</string>
    <string name="title_activity_member_details">Profile</string>
    <string name="title_activity_favorite">Favourite</string>


    <string name="country">Country :</string>
    <string name="matches">Match Played :</string>
    <string name="total_run">Total Score :</string>
    <string name="name">Name :</string>
    <string name="no_favourite_found">No favourite player found</string>
    <string name="favourite_player">Favourite Players</string>
    <string name="runs">Runs</string>
    <string name="cricket_played">Cricket Played</string>
    <string name="favourite">Favourites</string>
    <string name="api_quota_text">API Quota :</string>
    <string name="search_hint">Search (by name,country)</string>
    <string name="home">Home</string>
    <string name="player_details">Player Details</string>
</resources>
