<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.main.MainActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/autoCompleteTagLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_toolbar"
        android:layout_margin="4dp"
        android:background="@drawable/button_background_white">

        <EditText
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="4dp"
            android:layout_toLeftOf="@+id/pb_loading_indicator"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/icn_search"
            android:hint="@string/search_hint"
            android:padding="4dp"
            android:textColor="@color/dark_gray" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="2dp"
            android:visibility="gone" />
    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/playerListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/autoCompleteTagLayout" />


    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_gray"
        android:padding="8dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/apiCountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:text="@string/api_quota_text"
                android:textColor="#000" />

            <TextView
                android:id="@+id/quatoValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/apiCountText"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/showFavourite"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_background_white"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/favourite"
                android:textColor="#000"
                android:textSize="12dp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/sortByText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/sortByRuns"
            android:layout_alignBottom="@+id/sortByRuns"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="16dp"
            android:text="Sort By :"
            android:textColor="#000" />

        <Button
            android:id="@+id/sortByCricketPlayed"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/relativeLayout"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/sortByRuns"
            android:background="@drawable/button_background_white"
            android:drawableLeft="@drawable/cricket_equipment"
            android:drawablePadding="8dp"
            android:padding="6dp"
            android:text="@string/cricket_played"
            android:textSize="12sp" />

        <Button
            android:id="@+id/sortByRuns"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/relativeLayout"
            android:layout_toRightOf="@+id/sortByText"
            android:background="@drawable/button_background_white"
            android:drawableLeft="@drawable/cricket"
            android:padding="6dp"
            android:text="@string/runs"
            android:textSize="12sp" />


    </RelativeLayout>
</RelativeLayout>
